# practicalrecs-examples

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
practicalrecs_examples/: ann_search.py  artifacts.py  candidates.py  datasets  dithering.py  evaluation.py  filtering.py  matrix_factorization.py  metrics.py  pipeline.py
practicalrecs_examples/models/: celestial-bee-469-bce.pt  good-sweep-1-warp-01.pt  mf_example.pt  pious-meadow-467-bpr.pt
practicalrecs_examples/notebooks/: Ceiling Analysis-Refactoring.ipynb  Ceiling Analysis.ipynb  Evaluation-Baselines.ipynb  Scratch Space.ipynb  Smell Test.ipynb  utils.py
tests/: conftest.py  simulated.py  test_ann_search.py  test_dithering.py  test_filtering.py  test_matrix_factorization.py  test_pipeline.py  test_practicalrecs_examples.py
