[tool.poetry]
name = "practicalrecs-examples"
version = "0.1.0"
description = ""
authors = ["Karl Higley <kmhigley@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.7.0"
pytorch-lightning = "^0.9.0"
ranking-metrics-torch = "^0.2.3"
torch-factorization-models = {path = "../torch-factorization-models"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.8.2"
flake8 = "^3.8.4"
black = "^20.8b1"
rope = "^0.18.0"
pylint = "^2.6.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
